Fix color contrast (#98)
* Fix link in Chartifact interactive document host to point to the root

* use color scheme from docs.microsoft.com

--- a/docs/assets/css/page.css
+++ b/docs/assets/css/page.css
@@ -3,7 +3,7 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     line-height: 1.6;
-    color: #333;
+    color: #161616;
 }
 
 .content {
@@ -25,7 +25,7 @@ h2 {
 }
 
 a {
-    color: #0078d4;
+    color: #0065b3;
     text-decoration: none;
 }
 
